force-app/main/default/objects/Project__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>ProjectResource__c.AmountToPay__c</summarizedField>
    <summaryForeignKey>ProjectResource__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>