force-app/main/default/objects/Project__c/fields/OpportunityLineItem__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityLineItem</label>
    <referenceTo>OpportunityLineItem__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>