force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StartProject__c</columns>
    <columns>EndProject__c</columns>
    <columns>QuantityTotalHours__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>