force-app/main/default/objects/Project__c/listViews/ProjecDetails.listView-meta.xml
<ListView>
    <fullName>ProjecDetails</fullName>
    <columns>NAME</columns>
    <columns>EndProject__c</columns>
    <columns>StartProject__c</columns>
    <columns>QuantityTotalHours__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>EndProject__c</field>
        <operation>equals</operation>
    </filters>
    <label>ProjecDetails</label>
</ListView>